test/expected/escape_two_asterisks.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "**"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "*"
  Literal "*"
]
shit: 1:6: error: No matches for the glob pattern '**'.
     1 |  echo *\*
       |       ^~~ here.
